--- a/index-en.html
+++ b/index-en.html
@@ -10,7 +10,7 @@
         var CCMS_SitesSN_Encryption = '3035';
     </script>
     <title>
-        Printed triple stimulus vouchers
+        Triple Stimulus Vouchers — Coming Soon
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -224,8 +224,8 @@
                                                                                                     <div class="in">
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
-                                                                                                                <ul data-index="1" class="js-toggle-title" data-child="4" style="align-items: inherit;">
-                                                                                                                    <li data-index="1" class="">
+                                                                                                                <ul data-index="1" class="js-toggle-title" style="align-items: initial;" data-child="4">
+                                                                                                                    <li data-index="1" class="is-active">
                                                                                                                         <span><a href="#Group_319238_nQKUDpQhmB"
                                                                                                                                 title="Printed triple stimulus vouchers"
                                                                                                                                 target="_self">Printed
@@ -319,8 +319,7 @@
                                                                                                                             15</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>You may pre-order your vouchers from this website and designate at which convenience store you want to pick them up. You may pay online
-                                                                                                                        or at the counter of the convenience store after printing out a payment slip at its self-service kiosk.
+                                                                                                                    <p><strong>Citizens and spouses from overseas with residency permits</strong> may pre-order vouchers from this website and designate at which convenience store to pick them up. Pay online or at the counter of the convenience store after printing out a payment slip at its self-service kiosk.
                                                                                                                     </p>
 
                                                                                                                     <p><strong>July
@@ -343,7 +342,8 @@
                                                                                                                             15 Onwards</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Resident Certificate) purchase the vouchers from post offices.
+                                                                                                                    <p>You may bring with your National Health Insurance card and National ID Card (or Alien Permanent Residence Certificate)purchase the vouchers
+                                                                                                                        from post offices.
                                                                                                                     </p>
                                                                                                                 </div>
                                                                                                             </div>
@@ -360,12 +360,12 @@
                                                                                                             <div class="in">
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>Starting from
-                                                                                                                        <strong>July 1</strong> , eligible R.O.C. citizens and foreign nationals may link one of their credit cards to the voucher program
+                                                                                                                        <strong>July 1</strong> , eligible R.O.C. citizens and spouses from overseas with residency permits may link one of their credit cards to the voucher program
                                                                                                                         through this website. Those who spend for
                                                                                                                         <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st
                                                                                                                         December
-                                                                                                                        2020</strong>                                                                                                                        wwill be notified,
+                                                                                                                        2020</strong>                                                                                                                        will be notified,
                                                                                                                         <strong>NT$2,000</strong> credit will be returned towards the linked credit cards from next monthly credit card bill.
                                                                                                                     </p>
                                                                                                                 </div>
@@ -384,15 +384,21 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>From
                                                                                                                         <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and foreign nationals may link a name-based card to the voucher program through this website. Those who spend
+                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link a name-based card to the voucher program through this website. Those who spend
                                                                                                                         for
                                                                                                                         <strong>NT$3,000</strong> by
-                                                                                                                        <strong>31st</strong> December 2020 will be notified,
+                                                                                                                        <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong> NT$2,000</strong> will be returned towards the linked stored valued cards.
                                                                                                                     </p>
 
                                                                                                                     <p>&nbsp;
                                                                                                                     </p>
+
+                                                                                                                    <!-- <p class="hd"> Eligible cards </p>
+
+                                                                                                                    <p><img alt="card01" src="./images/card01.png" style="margin: 5px; width: 20%;"><img alt="card02" src="./images/card02.png" style="margin: 5px; width: 20%;">
+                                                                                                                        <img alt="card03" src="./images/card03.png" style="margin: 5px; width: 20%;"><img alt="card04" src="./images/card04.png" style="width: 20%; margin: 5px;">
+                                                                                                                    </p> -->
                                                                                                                 </div>
                                                                                                             </div>
                                                                                                         </div>
@@ -409,10 +415,10 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>From
                                                                                                                         <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and foreign nationals may link their preferred mobile payment app to the voucher program through this website.
+                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link their preferred mobile payment app to the voucher program through this website.
                                                                                                                         Those who spend for
                                                                                                                         <strong>NT$3,000</strong> by
-                                                                                                                        <strong>31st</strong> December 2020 will be notified,
+                                                                                                                        <strong>31st December 2020</strong> will be notified,
                                                                                                                         <strong>NT$2,000</strong> will be returned towards the linked mobile payment app.
                                                                                                                     </p>
 
@@ -530,9 +536,9 @@
 </body>
 
 <script>
-    var lis = $(".js-toggle-title > li");
-    var contents = $(".js-toggle-content > li");
-    var carousels = $(".js-carousel > li");
+    var lis = document.querySelectorAll(".js-toggle-title > li");
+    var contents = document.querySelectorAll(".js-toggle-content > li");
+    var carousels = document.querySelectorAll(".js-carousel > li");
     var currentLiIndex = 0;
     var current = 1
     var timer = 0;
@@ -542,55 +548,55 @@
 
         scrollToBottom();
 
-        var self = $(this);
+        var self = this;
 
-        lis.each(function (key, element) {
-            if ($(element).data("index") == self.data("index")) {
-                currentLiIndex = parseInt(self.data("index"), 10) + 1;
-                $(self).addClass("is-active");
+        lis.forEach(function(item) {
+            if (item.dataset.index === self.dataset.index) {
+                currentLiIndex = parseInt(self.dataset.index, 10) + 1;
+                self.classList.add("is-active");
             } else {
-                $(element).removeClass("is-active");
+                item.classList.remove("is-active");
             }
         });
 
-        contents.each(function (key, element) {
-            if (parseInt($(element).data("index"), 10) == 1) {
+        contents.forEach(function(content) {
+            if (parseInt(content.dataset.index, 10) === 1) {
                 return;
             }
 
-            if (parseInt($(element).data("index"), 10) == currentLiIndex) {
-                $(element).css("display", "list-item");
+            if (parseInt(content.dataset.index, 10) === currentLiIndex) {
+                content.style.display = "list-item";
             } else {
-                $(element).css("display", "none");
+                content.style.display = "none";
             }
         });
     }
 
     function scrollToBottom() {
-        if (document.body.clientHeight + document.body.scrollTop != document.body.scrollHeight) {
-            $("body").animate({
-                scrollTop: document.body.scrollHeight
-            }, 1000);
+        if (document.body.clientHeight + document.body.scrollTop !== document.body.scrollHeight) {
+            window.scroll({
+                top: document.body.scrollHeight,
+                behavior: 'smooth',
+            });
         }
     }
 
-    lis.each(function (key, element) {
-        $(element).on("click", toggleClass);
+    lis.forEach(function(item) {
+        item.addEventListener("click", toggleClass);
     });
-    
 
-    timer = setInterval(function () {
+    timer = setInterval(function() {
         if (current === carousels.length) {
             current = 1;
         }
 
         current++;
 
-        carousels.each(function (key, element) {
-            if (parseInt($(element).data("index"), 10) == current) {
-                $(element).css("display", "list-item");
+        carousels.forEach(function(carousel) {
+            if (parseInt(carousel.dataset.index, 10) === current) {
+                carousel.style.display = "list-item"
             } else {
-                $(element).css("display", "none");
+                carousel.style.display = "none";
             }
         });
     }, 5000);
