--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-
 <html xmlns="http://www.w3.org/1999/xhtml" class="">
 
 <head id="Head1">
@@ -16,9 +14,10 @@
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link id="likCss" rel="stylesheet" media="screen" href="css/global.css?1090612051443" type="text/css">
-    <link href="css/sys_index.css" rel="stylesheet" type="text/css">
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon">
+    <link id="likCss" rel="stylesheet" media="screen" href="../css/global.css?1090612051443" type="text/css">
+    <link href="../css/sys_index.css" rel="stylesheet" type="text/css">
+    <link href="css/global.css" rel="stylesheet" type="text/css">
+    <link href="./images/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://hscp-ws.hamastar.com.tw/001/administrator/3035/sites/pagebackimage/6baf54d5-0b15-466d-93b4-31994d63f562.png" rel="icon" type="image/x-icon">
     <meta property="og:title" content="行政院振興方案網站">
     <meta property="og:type" content="article">
@@ -307,7 +306,7 @@
                                                                                                                     <p style="font-size:1.2em;"><strong>7/1-7/15</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>到本網站預購，並指定領取超商，可以在網站上直接繳費、也可以去超商事務機印繳費單到櫃檯繳費。
+                                                                                                                    <p><b>國民、有居留權的配偶</b>到本網站預購，並指定領取超商，可以在網站上直接繳費、也可以去超商事務機印繳費單到櫃檯繳費。
                                                                                                                     </p>
 
                                                                                                                     <p style="font-size:1.2em;"><strong>7/15後</strong>
@@ -344,7 +343,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定信用卡</li>
@@ -370,7 +369,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定實名制卡片<strong></strong></li>
@@ -399,7 +398,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定</li>
